# to_latex_converter

./: .gitignore  Makefile  README.md  pyproject.toml
configs/: data_preprocess.yaml
to_latex_converter/: train.py  utils.py
to_latex_converter/tools/: data_generator.py  extract_tex_text_from_tex_file.py  tex2png.py
